css/style.css
* {
	box-sizing: border-box;
}

body {
	background-color: gainsboro;
	/* Use a system font, if none are available use an available sans-serif */
	font-family: system-ui, sans-serif;
	margin: 0;
    width: 100dvw;
    height: 100dvh;
	display: flex;
	flex-direction: column;
	align-items: center;
    gap: 3dvh;
}

h1 {
    margin: 10px 0 0 0;
    font-size: 48px;
}

h2 {
    margin: 0;
}

.board {
	display: flex;
	flex-wrap: wrap;
    justify-content: center;
	width: 325px;
}

.sqr {
	width: 33%;
	aspect-ratio: 1/1;
	border: 3px solid black;
	font-size: 64px;
	text-align: center;
}

